# auralis

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirments.txt  versions.txt
.github/workflows/: release.yml
Auralis/audio/: processing.py
Auralis/datasets/: dataset_loader.py
Auralis/examples/: audio_processing.py
Auralis/speech_to_text/: inference.py
Auralis/text_to_speech/: synth.py
auralislib/tests/: test_stt.py
